--- a/latex/keccak-preimage.tex
+++ b/latex/keccak-preimage.tex
@@ -9,7 +9,8 @@
 \usetikzlibrary{decorations.pathmorphing,matrix,decorations.pathreplacing,arrows,decorations.markings}
 \usetikzlibrary{fit,calc,shapes,arrows,positioning,shadings,backgrounds,patterns,tikzmark,matrix,spy}
 \usetikzlibrary{decorations.markings}
-
+\usepackage{mathtools}
+\DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 \usepackage[T1]{fontenc}
 \begin{document}
 
@@ -524,18 +525,97 @@ In Guo-Liu-Song, Fig. 13 the (allowed) linear pattern after 32 rounds is the sam
 \begin{enumerate}
     \item This is in reference to Guo et al work "Linear Structures: Applications to Cryptanalysis of Round-Reduced Keccak"
     \item As seen in Fig. $13, 14$ of section 6.2, the attacks for Keccak-256 and Keccak-224 resp.
-    \item For both of them input to the step $\chi$ of the third round are all linear, hence the method for matching a hash bits by linearizing the terms corresponding to these hash bitscan work for this too. As shown in section 6.3.
+    \item Lets see Keccak-224 in more detail, so the attack mentioned in section 6.2 has the following structure as shown in Figure $14$.
+    \begin{figure}
+        \includegraphics[width=\linewidth]{keccak224.png}
+        \label{fig:boat1}
+    \end{figure}
+    \item Here the input to the step $\chi$ of the third round are all linear.
+    \item So, if we consider the state input to $\chi$ of third round be $A$, output of $\chi$ be $B$ and output of fourth round $\theta$ be $C$.
     
-    \item In this we linearize the output of $\theta$ of 4th round by guessing bits input to $\theta$. We need 10 guesses to match 1-bit, but 
+    \item Then we have the following relations : 
+    \item \[
+			B[x][y][z] = A[x][y][z] \oplus (A[x+1][y][z] \oplus 1) \cdot A[x+2][y][z]
+		\]
+	\item \[
+        C[x][y][z] = B[x][y][z] \oplus \oplus_{y' = 0}^{4} B[x-1][y'][z] \oplus \oplus_{y' = 0}^{4} B[x+1][y'][z-1]
+    \]
+    \item $A[x+1][y][z]$ is a common bit in both $B[x][y][z]$ and $B[x-1][y][z]$.
+    \item We linearize $C[x][y][z]$ by guessing $B[x+1][y'][z-1]$ for all $0 \leq y' \leq 4$ and $B[x-1][y'][z]$ for all $y'$ other than $y$ . These all are 9 guesses.
+    \item Also, after guessing $A[x+1][y][z]$, hence a total of $9+1 = 10$ bits are guessed.
+    \item Guessing $A[x+1][y][z]$ makes $B[x][y][z] \oplus B[x-1][y][z]$ term linear.
+    \item So after these 10 guesses $C[x][y][z]$ is linearized.
+    \item Hence the method for matching hash bits by linearizing the terms corresponding to these hash bits is applied here.
+    \item In this we linearize the output of $\theta$ of 4th round by guessing bits input to $\theta$. We need 10 guesses to match 1-bit.
+    
+    \item By this method we obtain $ 1 + 10 $ linear equations by 10 guesses and we are able to match 1 bit of hash value corresponding to $C[x][y][z]$.
+    
+    \item Hence we can match $\floor*{ \frac{t}{11} }$ bits of the hash value if we have $t$ variables.
+    
+    \item Why this works ?
+    
+    \item For Keccak-224 we can't invert the hash value through $\chi^{-1}$ as its possible for for Keccak-512, but we can set up the equations such as $a_0 = b_0$ for $b_1 = 1$ according to (6) equation of Guo et. al. paper. ( For inversion of hash through $\chi^{-1}$ we can think of other ideas too, like randomly setting the remaining hash bits in row0, so as to get full row bits or maybe some other method )
+    
+    \item The relations obtained after invert operation by $\chi^{-1}$, so the each bit of the state just after final $\chi$ is a sum of 11 bits of the output of the third round (due to $\theta$).
+    
+    \item $\pi \circ \rho$ just permutate the positions of bits and $\iota$ only adds a constant, hence they don't increase or introduce any non-linear term. Hence after linearizing $C[x][y][z]$ we can match the hash bits.
+    
+    \item Time Complexity by above method , Keccak-224 has 127 variables
+    \item No. of matched bits $ = \floor*{ \frac{127}{11} } = 11 $
+    \item Attack complexity $ = 2^{224 - 11} = 2^{213}$.
     
     \item As seen in Improved preimage attacks on 3-round Keccak-384 and Keccak-512 by Guo et. al in section 6.3 . It is possible to cut down the time complexity if we elaborately choose linearly dependent ones, since there will be more degrees of freedom for guessing more linear combinations to match more bits of the hash value.
+    
+    \item So we start with following two equations, $B$ represents the state after third round $\chi$
+    
+    \item 
+		\[
+			B[x][y][z] = A[x][y][z] \oplus (A[x+1][y][z] \oplus 1) \cdot A[x+2][y][z]
+		\] and
+		\[
+			B[x-1][y][z] = A[x-1][y][z] \oplus (A[x][y][z] \oplus 1) \cdot A[x+1][y][z]
+		\]
+
+	\item By guessing $A[x+1][y][z]$ we make both of the above equations linear.
+	
+	\item Hence we guess for $0 \leq y \leq 4$ $A[x+1][y][z]$. Similarly for $B[x+1][y][z-1], B[x+2][y][z-1]$ we guess $0 \leq y \leq 4$ $A[x+3][y][z-1]$. 
+	\item 
+		\[
+        C[x][y][z] = B[x][y][z] \oplus \oplus_{y' = 0}^{4} B[x-1][y'][z] \oplus \oplus_{y' = 0}^{4} B[x+1][y'][z-1]
+    \] and 
+		\[
+        C[x+1][y+1][z] = B[x+1][y+1][z] \oplus \oplus_{y' = 0}^{4} B[x][y'][z] \oplus \oplus_{y' = 0}^{4} B[x+2][y'][z-1]
+    \]
+
+    \item These 10 bits are guessed not only make $C[x][y][z]$ linear, but $C[x+1][y+1][z]$ has only one quadratic term $B[x+1][y+1][z]$ left and after guessing that $C[x+1][y+1][z]$ is also linear. 
+    
+    \item We can match 2 bits by setting up 13 (10 + 1 + 2) linear equations. 
+    
+    \item Then we consider another two equations :
+    
+    \item 	\[
+        C[x + 2][y+2][z-1] = B[x + 2][y+2][z-1] \oplus \oplus_{y' = 0}^{4} B[x+1][y'][z-1] \oplus \oplus_{y' = 0}^{4} B[x+3][y'][z-2]
+    \] and 
+		\[
+        C[x+3][y+3][z-1] = B[x+3][y+3][z-1] \oplus \oplus_{y' = 0}^{4} B[x+2][y'][z-1] \oplus \oplus_{y' = 0}^{4} B[x+4][y'][z-2]
+    \]
+    
+    \item Here we can set up another 8 linear equations and match two more bits of the hash value by guessing 6 more bits.
+    
+    \item So in general, if there are $t$ variables then we can match $2\floor*{\frac{t-5}{8}}$.
+    
     \item So, if we apply the same technique to 4 rounds Keecak-224, Keccak-256
-    \item Then we have 127 and 64 variables resp, we can match $2*\frac{t-5}{8}$ bits of a hash value if we have t variables.
-    \item For Keecak-224 : matched bits $= 30$
+    \item Then we have 127 and 64 variables resp, we can match $2\floor*{\frac{t-5}{8}}$ bits of a hash value if we have t variables.
+    \item For Keecak-224 : matched bits $= 30$ for $t = 127$
     \item Time Complexity : $2^{224 - 30} = 2^{194}$
     \item And similarly for Keccak-256, Time complexity $=2^{256 - 14} = 2^{242}$
     \item Another Idea : Maybe some better relations can be drawn between variables and hash values to match more bits. Like for symmetric cases, guesses for $A[x][y][z]$ would also work for $A[x][y][z + i]$. So good possibility for more matched bits from lesser variables. Would give good reductions in time complexities for 4 rounds of Keecak-224,256.
 \end{enumerate}
 
+% \newpage
+% \begin{tikzpicture}
+%     \draw [step=1.0,black, very thick] (0,0) grid (5,5);
 
+%     \draw [step=1.0,black, very thick] (7,0) grid (12,5);
+% \end{tikzpicture}
 \end{document}
